2007-05-10  Brady Anderson <banderso@novell.com> 

	* Banter/Account.cs: updated the provider user list when finished
	  connecting
	* Banter/ProviderUser.cs: added a setter on Presence

2007-05-10  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/ProviderUserManager.cs: Added the CreateProviderUser method to
	  create and add a user in one operation

2007-05-10  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/ProviderUserManager.cs: Changed Set to AddProviderUser and
	  made it check for a key and throw an exception if it's there before
	  adding it

2007-05-10  Brady Anderson <banderso@novell.com> 

	* Banter/ProviderUser.cs: added sip

2007-05-10  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/ProviderUser.cs: Added const names for Protocols

2007-05-10  Brady Anderson <banderso@novell.com> 

	* Banter/AccountManagement.cs: Changed start/stop paradigm to just
	  initialize
	* Banter/Application.cs: General cleanup and warning removal

2007-05-10  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/Presence.cs, Banter/ProviderUserManager.cs,
	  Banter/ProviderUser.cs: Filled out class to give it basic
	  functionality

2007-05-10  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter.mdp: Added new classes Presence, ProviderUser, and
	  ProviderUserManager
	* Banter/Presence.cs: Added new class to represent Presence in Banter
	* Banter/ProviderUserManager.cs: Added new class to manage the
	  ProviderUsers in Banter
	* Banter/ProviderUser.cs: Added new class to represent a user account
	  in Banter

2007-05-10  Brady Anderson <banderso@novell.com> 

	* Banter/Application.cs: moved global tapioca connection creation and
	  processing into account

2007-05-10  Brady Anderson <banderso@novell.com> 

	* Banter/ChatWindow.cs: new constructor with conversation

2007-05-10  Brady Anderson <banderso@novell.com> 

	* Banter.mdp: added ConversationManager

2007-05-10  Brady Anderson <banderso@novell.com> 

	* Banter.mdp, Banter/Makefile.am: added ConversationManager